Added adding product feature

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
   <body class="bg-dark text-light">
 
     <div class="p-5 rounded-3">
-      <div class="container-fluid py-2">
+      <div class="container-fluid">
         <h1 class="display-5 fw-bold">StockTaker</h1>
         <h1>Products</h1>
         <div id="products">
@@ -35,12 +35,15 @@
                 </tbody>
             </table>
         </div>
+        <div class="container-fluid px-5 text-center" id="addProducts">
+          <button class="btn btn-info fw-bold px-4 my-3" id="add">Add product</button>
+        </div>
         <br><br>
       </div>
     </div>
-
     
-    <footer class="footer px-5 pb-2">
+    
+    <footer class="footer px-5 pb-2 pt-2">
       <div class="container-fluid">
         <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub"><i class="bi bi-github"></i> GitHub</a></p>
       </div>
