Added many new features

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,6 +17,7 @@
     <div class="p-5 rounded-3">
       <div class="container-fluid">
         <h1 class="display-5 fw-bold">StockTaker</h1>
+        <p id="goback">Go to start</p>
         <h1>Products</h1>
         <div id="products">
             <table class="table text-light" id="table">
@@ -31,7 +32,6 @@
                     </tr>
                 </thead>
                 <tbody id="table-body">
-
                 </tbody>
             </table>
         </div>
@@ -45,7 +45,7 @@
     
     <footer class="footer px-5 pb-2 pt-2">
       <div class="container-fluid">
-        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub"><i class="bi bi-github"></i> GitHub</a></p>
+        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub" class="text-light text-decoration-none" href=""><i class="bi bi-github"></i> GitHub</a></p>
       </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
