--- a/pages/connect.html
+++ b/pages/connect.html
@@ -17,6 +17,7 @@
       <div class="container-fluid py-2">
         <h1 class="display-5 fw-bold">Connect your Database</h1>
         <p class="col-md-8 fs-4">Manage your shop using your own database. </p>
+        <p><span id="goback">Go back</span></p>
         <form class="col-md-8" id="form">
             <div>
               <label for="host" class="form-label">Database host</label>
@@ -46,7 +47,7 @@
 
     <footer class="footer px-5 pb-2">
       <div class="container-fluid">
-        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub"><i class="bi bi-github"></i> GitHub</a></p>
+        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub" class="text-light text-decoration-none" href=""><i class="bi bi-github"></i> GitHub</a></p>
       </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
