--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@
 
     <footer class="footer px-5 pb-2">
       <div class="container-fluid">
-        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub"><i class="bi bi-github"></i> GitHub</a></p>
+        <p class="text-muted">StockTaker is a project by Riccardo Zunino <br><a id="opengithub" class="text-light text-decoration-none" href=""><i class="bi bi-github"></i> GitHub</a></p>
       </div>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
